[package]
name = "wiki"
version = "0.1.0"
authors = ["julio <julio.grillo98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
unicode-width = "0.1.8"
mio = { version = "0.7.7", features = ["os-poll", "os-ext"] }
aho-corasick = { path = "lib/aho-corasick" }
nix = "0.19.1"
